--- a/template/startbootstrap-modern-business-gh-pages/index.html
+++ b/template/startbootstrap-modern-business-gh-pages/index.html
@@ -5,15 +5,15 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Site officiel de la Brigade de Montbenon">
+    <meta name="author" content="Brigade de Montbenon">
 
-    <title>Modern Business - Start Bootstrap Template</title>
+    <title>Brigade de Montbenon</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    <!-- Style css customisé-->
     <link href="css/modern-business.css" rel="stylesheet">
 
   </head>
@@ -21,9 +21,9 @@
   <body>
 
     <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-success fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+        <a class="navbar-brand" href="index.html">Brigade de Montbenon - Groupe scout de la région lausannoise</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -85,25 +85,25 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active" style="background-image: url('http://placehold.it/1900x1080')">
+          <!-- 1 e photo de presentation - mettre un texte et une photo de 1900x800 -->
+          <div class="carousel-item active" style="background-image: url('mettre image')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>First Slide</h3>
-              <p>This is a description for the first slide.</p>
+              <h3>En savoir plus</h3>
+              <p>blablablablabla (mettre le texte en lien --> page pour linscription avec info)</p>
             </div>
           </div>
-          <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <!-- 2 e photo de presentation - mettre un texte et une photo de 1900x800 -->
+          <div class="carousel-item" style="background-image: url('mettre image')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Second Slide</h3>
-              <p>This is a description for the second slide.</p>
+              <h3>blalbalbablabal</h3>
+              <p>blablablbalablablblab</p>
             </div>
           </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
+          <!-- 3 e photo de presentation - mettre un texte et une photo de 1900x800 -->
+          <div class="carousel-item" style="background-image: url('mettre image')">
             <div class="carousel-caption d-none d-md-block">
-              <h3>Third Slide</h3>
-              <p>This is a description for the third slide.</p>
+              <h3>bllbalbaablabll</h3>
+              <pbalalbabllbaalb</p>
             </div>
           </div>
         </div>
